fixed z-index of swiper

--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -8,6 +8,7 @@
 .swiper-container {
   text-align: center;
   margin-bottom: 30px;
+  z-index: 0;
 }
 
 .swiper-button-prev,
